# canvas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
001-SimpleTestbed/: CMakeLists.txt  main.cpp
01-ImageCreator/: CMakeLists.txt  cgg_logo.h  main.cpp
900-Common/: CMakeLists.txt  Vector3.h
Canvas/: CMakeLists.txt
Canvas/.third-party/: CMakeLists.txt
Canvas/.third-party/glad/: CMakeLists.txt  LICENSE.txt
Canvas/.third-party/glad/include/glad/: glad.h
Canvas/.third-party/glad/src/: glad.c
Canvas/.third-party/imgui-1.87/: CMakeLists.txt
Canvas/.third-party/imgui-1.87/backends/: imgui_impl_glfw.cpp
Canvas/.third-party/stb-image/: LICENCE.txt
Canvas/Animation/: BasicAnimator.cpp  BasicAnimator.h
Canvas/Base/: CanvasMath.h  Math.h  Types.h
Canvas/Base/Colour/: ColourAtlas.h  ColourUtils.cpp  RGB.cpp
Canvas/Base/Image/: ImageUtils.h
Canvas/Base/Math/: Matrix.cpp  Matrix.h  Matrix.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Transforms.cpp  Transforms.h  Types.h  Utils.h  Vector.cpp  Vector.h  Vector.inl
Canvas/Colour/: ColourAtlas.h  ColourUtils.h  RGB.h
Canvas/Debug/: PrintFunctions.cpp  PrintFunctions.h
Canvas/Drawing/: Canvas.cpp  Canvas.h
Canvas/Drawing/Shapes/: Circle.cpp  Circle.h
Canvas/Image/: Drawing.cpp  Drawing.h  Image.cpp  Image.h
Canvas/Math/: Matrix.cpp  Matrix.h  Point.cpp  Quaternion.cpp  Quaternion.h  Transforms.cpp  Transforms.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h
Canvas/OpenGL/: Buffers.cpp  Buffers.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Canvas/Realtime/OpenGL/: Buffers.cpp  Shader.h  Texture.h
Canvas/Realtime/Window/: ImguiWindow.h  Window.cpp  Window.h
Canvas/Window/: ImguiWindow.cpp  ImguiWindow.h  Window.cpp  Window.h
Common/: CMakeLists.txt
Common/Animation/: BasicAnimator.cpp  BasicAnimator.h
Common/Base/: Types.h
Common/Colour/: ColourAtlas.h  ColourUtils.cpp  ColourUtils.h  RGB.cpp  RGB.h
Common/Image/: Drawing.cpp  Drawing.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h
Common/Math/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  Transforms.cpp  Transforms.h  Vector.cpp  Vector.h
Examples/: CMakeLists.txt
Examples/01-ImageCreator/: cgg_logo.h
Examples/02-Window/: CMakeLists.txt  main.cpp
Examples/03-Drawing/: main.cpp
Examples/04-Quaternions/: CMakeLists.txt  main.cpp
Projects/: CMakeLists.txt
Projects/01-ImageCreator/: CMakeLists.txt
Projects/03-Drawing/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  shape.h
Projects/04-Quaternions/: main.cpp  textures.h
stb-image/: CMakeLists.txt
